Make toggle more descriptive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <pre>
-    <code class="preview"></code>
+    <code></code>
   </pre>
   <div>
     <label for="language_selector">Language:</label>
@@ -452,6 +452,7 @@
       <option value="base16/xcode-dusk">base16/xcode-dusk</option>
       <option value="base16/zenburn">base16/zenburn</option>
     </select>
+    <button id="letter_spacing_button">Enable Letter Spacing</button>
     <button id="letter_spacing_button">Toggle Letter Spacing</button>
   </div>
   <textarea name="input" id="input" cols="60" rows="30" placeholder="Input"></textarea>
