Add copy output button

--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
     </select>
     <button id="letter_spacing_button">Enable Letter Spacing</button>
     <button id="inline_button">Enable Inline Mode</button>
+    <button id="copy_button">Copy HTML Output</button>
   </div>
   <textarea name="input" id="input" cols="60" rows="30" placeholder="Input"></textarea>
   <textarea name="output" id="output" cols="60" rows="30" placeholder="HTML Output"></textarea>
