Add simple css styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inline Syntax Highlighter</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/github.min.css">
+  <link rel="stylesheet" href="main.css">
+  <link id="theme_link" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/github.min.css">
 </head>
 
 <body>
@@ -456,8 +457,8 @@
     <button id="inline_button">Enable Inline Mode</button>
     <button id="copy_button">Copy HTML Output</button>
   </div>
-  <textarea name="input" id="input" cols="60" rows="30" placeholder="Input"></textarea>
-  <textarea name="output" id="output" cols="60" rows="30" placeholder="HTML Output"></textarea>
+  <textarea name="input" id="input" placeholder="Input"></textarea>
+  <textarea name="output" id="output" placeholder="HTML Output"></textarea>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script>
   <script src="main.js"></script>
 </body>
